tests/NormalTests/paczka1/fuzzy1/45387096.err
Error in line 17: 5M10cmhv S706 29,8
Error in line 19: 5M10cmhv S411 93,7
Error in line 11: bx5MS S706 14,4
Error in line 22: Z8Hya5I8QP S109 144,5
Error in line 32: XViN2FYWgF S706 56,7
Error in line 28: S706 S706 107,4
